Проект 1.1_multicalculators_JavaScript Установил пакеты Babel JS для разработки (см.файл package.json) Настроил файл (webpack.config.js) для работы с Babel JS Выполнена новая сборка папки dist
Project 1.1_multicalculators_JavaScript
Installed Babel JS packages for development (see the package file.json)
Configured the file (webpack.config.js) to work with Babel JS
Performed a new build of the dist folder

--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "url": "https://github.com/MikaBerza/1.1_multicalculators_JavaScript/issues"
   },
   "homepage": "https://github.com/MikaBerza/1.1_multicalculators_JavaScript#readme",
+  "browserslist": "> 0.25%, not dead",
   "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4",
     "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
     "file-loader": "^6.2.0",
