--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "rules": {
         "linebreak-style": ["error", "windows"],
         "no-plusplus":"off",
-        "no-param-reassign": 0
+        "no-param-reassign": 0,
+        "prefer-destructuring": ["error", {"object": true, "array": false}]
     }
 }
